Fix the launcher to behave differently in GUI/CLI